# privacy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
eif/: cmdline-aarch64  cmdline-x86_64  init-ramdisk.yaml  user-ramdisk.yaml
src/: aws.rs  dynamodb.rs  enclave.rs  error.rs  kms.rs  lib.rs  main.rs  rpc.rs  vsock_transport.rs
