[package]
name = "privacy-enclave"
version = "0.1.0"
edition = "2021"
description = "A simple Hello World RPC service for AWS Nitro Enclaves"
license = "MIT"

[[bin]]
name = "enclave-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# AWS Nitro Enclave NSM API for attestation
aws-nitro-enclaves-nsm-api = "0.4"

# JSON-RPC and serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"

# HTTP server (for JSON-RPC over HTTP-like protocol)
hyper = { version = "1.2", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1.5"

# Cryptography
ring = "0.17"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Linux-only dependencies for vsock
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28", features = ["socket"] }
tokio-vsock = "0.5"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
